--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "@types/jest": "^26.0.20",
-    "jest": "^26.6.3",
+    "jest": "26.6.0",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   }
