--- a/package.json
+++ b/package.json
@@ -8,22 +8,31 @@
   "author": "Martin Hoffmann <maddinpsycho@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/classnames": "^2.2.11",
+    "@types/koa-static": "^4.0.1",
     "@types/node": "^12.19.15",
-    "@types/react": "^16.14.2",
+    "@types/react": "^16.14.3",
     "@types/react-dom": "^16.9.10",
+    "@types/react-router-dom": "^5.1.7",
     "@types/webpack-env": "^1.16.0",
     "boardgame.io": "^0.43.2",
+    "classnames": "^2.2.6",
+    "esm": "^3.2.25",
+    "koa-static": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.6",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && ./node_modules/typescript/bin/tsc --project tsconfig-server.json",
     "testui": "react-scripts test",
     "eject": "react-scripts eject",
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "serve": "node -r esm build/server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -45,11 +54,11 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.2",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.6.3",
     "@types/jest": "^26.0.20",
     "jest": "26.6.0",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^26.5.0",
     "typescript": "^4.1.3"
   }
 }
