--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "boardgame.io": "^0.43.2",
     "classnames": "^2.2.6",
     "esm": "^3.2.25",
+    "i18next": "^19.9.1",
+    "i18next-browser-languagedetector": "^6.0.1",
     "koa-static": "^5.0.0",
+    "node-sass": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.6",
