--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
     "react-scripts": "4.0.1"
   },
   "scripts": {
+    "build": "react-scripts build && tsc --project tsconfig-server.json",
+    "serve": "node -r esm build/server.js",
+
     "start": "react-scripts start",
-    "build": "react-scripts build && ./node_modules/typescript/bin/tsc --project tsconfig-server.json",
+    "serve-watch": "tsc-watch --project tsconfig-server.json --watch --onSuccess 'node -r esm build/server.js'",
+
     "testui": "react-scripts test",
     "eject": "react-scripts eject",
     "test": "jest",
-    "coverage": "jest --coverage",
-    "serve": "node -r esm build/server.js"
+    "coverage": "jest --coverage"
   },
   "eslintConfig": {
     "extends": [
@@ -62,6 +65,7 @@
     "@types/jest": "^26.0.20",
     "jest": "26.6.0",
     "ts-jest": "^26.5.0",
+    "tsc-watch": "^4.2.9",
     "typescript": "^4.1.3"
   }
 }
